add report uri to response; enable response validation
